cursive-bootstrap/tests/ui/E-TYP/E-TYP-2509.cursive
// RUN: compile-fail
// DIAG: E-TYP-2509
// SPEC: 8.15
// DESC: Superclass bound refers to undefined class

class Child <: NonExistent {  //~ ERROR E-TYP-2509: superclass undefined
    procedure method(~) -> i32
}

public procedure main(move ctx: Context) -> i32 {
    return 0
}

